resolved the alignment issue

--- a/src/Buyer/components/Buy/BySupplier/supplierdetails.module.css
+++ b/src/Buyer/components/Buy/BySupplier/supplierdetails.module.css
@@ -63,6 +63,7 @@
 .typeHead {
     font-size: 14px;
     font-weight: 500;
+    color: #282f86 !important;
 }
 
 .headIcons {
